database implementation for login

--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -19,6 +19,12 @@
         <activity android:name=".LoginActivity"
             android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
         </activity>
+        <activity android:name=".RegistrationActivity"
+            android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
+        </activity>
+        <activity android:name=".AppActivity"
+            android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
+        </activity>
     </application>
 
 </manifest>
