fixed LoginDataBaseAdapter getEntry method, fixed app crashing on login

--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".LoginActivity"
+            android:label="Login"
             android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
         </activity>
         <activity android:name=".RegistrationActivity"
+            android:label="Register"
             android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
         </activity>
         <activity android:name=".AppActivity"
