--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -2,30 +2,33 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jl.ratatouille">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name="com.example.jl.ratatouille.app.AppController"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity"
+        <activity android:name=".activity.LoginActivity"
             android:label="Login"
-            android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
+            android:parentActivityName="com.example.jl.ratatouille.activity.MainActivity" >
         </activity>
-        <activity android:name=".RegistrationActivity"
+        <activity android:name=".activity.RegistrationActivity"
             android:label="Register"
-            android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
+            android:parentActivityName="com.example.jl.ratatouille.activity.MainActivity" >
         </activity>
-        <activity android:name=".AppActivity"
-            android:parentActivityName="com.example.jl.ratatouille.MainActivity" >
+        <activity android:name=".activity.AppActivity"
+            android:parentActivityName="com.example.jl.ratatouille.activity.MainActivity" >
         </activity>
     </application>
 
