--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -5,11 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-<<<<<<< HEAD
-        android:name=".app.AppController"
-=======
         android:name="com.example.jl.ratatouille.sync.AppController"
->>>>>>> 97301f44f39331b40d235ab20af3e3dfe2fdd6ba
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -30,25 +26,22 @@
         <activity
             android:name=".activity.RegistrationActivity"
             android:label="Register"
-<<<<<<< HEAD
             android:parentActivityName=".activity.MainActivity"></activity>
         <activity
             android:name=".activity.AppActivity"
             android:parentActivityName=".activity.MainActivity"></activity>
         <activity
             android:name=".activity.AddRatActivity"
-            android:label="@string/title_activity_add_rat"
+            android:label="hello"
             android:theme="@style/AppTheme.NoActionBar"></activity>
-=======
+
             android:parentActivityName="com.example.jl.ratatouille.activity.MainActivity" >
-        </activity>
         <activity android:name=".activity.RatListActivity"
             android:parentActivityName="com.example.jl.ratatouille.activity.MainActivity" >
         </activity>
         <activity android:name=".activity.RatViewActivity"
             android:parentActivityName=".activity.RatListActivity">
         </activity>
->>>>>>> 97301f44f39331b40d235ab20af3e3dfe2fdd6ba
-    </application>
 
+    </application>
 </manifest>
