added bottom navigation bar, fab for addrat, icons

--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -36,6 +36,12 @@
         <activity android:name=".activity.AddRatActivity"
             android:parentActivityName=".activity.RatListActivity">
         </activity>
+        <activity android:name=".activity.SettingsActivity"
+            android:parentActivityName=".activity.RatListActivity">
+        </activity>
+        <activity android:name=".activity.MapsActivity"
+            android:parentActivityName=".activity.RatListActivity">
+        </activity>
     </application>
 
 </manifest>
