--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -23,6 +23,7 @@ repositories {
     jcenter()
     maven {
         url "https://maven.google.com"
+
     }
 }
 
@@ -35,5 +36,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
     compile 'com.mcxiaoke.volley:library-aar:1.0.0'
+    compile 'com.android.support:design:26.0.2'
     compile 'com.android.support:recyclerview-v7:26.0.2'
+    compile 'com.roughike:bottom-bar:2.3.1'
 }
