--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -27,20 +27,20 @@
             android:label="Register"
             android:parentActivityName="com.example.jl.ratatouille.activity.MainActivity" >
         </activity>
-        <activity android:name=".activity.RatListActivity"
+        <activity android:name=".activity.ListActivity"
             android:parentActivityName="com.example.jl.ratatouille.activity.MainActivity" >
         </activity>
         <activity android:name=".activity.RatViewActivity"
-            android:parentActivityName=".activity.RatListActivity">
+            android:parentActivityName=".activity.ListActivity">
         </activity>
         <activity android:name=".activity.AddRatActivity"
-            android:parentActivityName=".activity.RatListActivity">
+            android:parentActivityName=".activity.ListActivity">
         </activity>
         <activity android:name=".activity.SettingsActivity"
-            android:parentActivityName=".activity.RatListActivity">
+            android:parentActivityName=".activity.ListActivity">
         </activity>
         <activity android:name=".activity.MapsActivity"
-            android:parentActivityName=".activity.RatListActivity">
+            android:parentActivityName=".activity.ListActivity">
         </activity>
     </application>
 
