--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.jl.ratatouille">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
 
@@ -49,6 +50,8 @@
             android:parentActivityName=".activity.ListActivity">
         </activity>
 
+        <meta-data android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAAFf9nwOeAsYt7HJz6Kte_pvsO2-T253s"/>
 
     </application>
 </manifest>
