--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
 
@@ -52,6 +53,11 @@
 
         <meta-data android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAAFf9nwOeAsYt7HJz6Kte_pvsO2-T253s"/>
+
+        <service
+            android:name=".service.DataService"
+            android:exported="false"/>
+
 
     </application>
 </manifest>
