--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     compile 'com.roughike:bottom-bar:2.3.1'
     compile 'com.google.android.gms:play-services-maps:11.4.2'
     compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.squareup.okhttp3:okhttp:3.9.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
