--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:26.1.0'
@@ -40,8 +41,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:11.4.2'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.jjoe64:graphview:4.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
