--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.jjoe64:graphview:4.2.1'
+    compile 'net.grandcentrix.tray:tray:0.12.0'
     testCompile 'org.testng:testng:6.9.6'
 }
 
