--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -42,6 +42,9 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    androidTestCompile 'org.junit.jupiter:junit-jupiter-api'
+    androidTestCompile 'org.junit.jupiter:junit-jupiter-api'
+    androidTestCompile 'org.junit.jupiter:junit-jupiter-api'
 }
 
 apply plugin: 'com.google.gms.google-services'
