--- a/Ratatouille_Project/app/src/main/AndroidManifest.xml
+++ b/Ratatouille_Project/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:exported="false" />
 
         <activity android:name=".activity.FilterActivity" />
-        <activity android:name=".activity.GraphActivity"></activity>
+        <activity android:name=".activity.GraphActivity" />
     </application>
 
 </manifest>
