--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -31,6 +31,12 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.2.2'){
+        exclude module: 'support-annotations'
+    }
+    androidTestCompile ('com.android.support.test:rules:0.5'){
+        exclude module: 'support-annotations'
+    }
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
@@ -44,7 +50,34 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'net.grandcentrix.tray:tray:0.12.0'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.7.22'
     testCompile 'org.testng:testng:6.9.6'
+    androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
+
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-library:1.3'
+    androidTestCompile ('com.android.support.test:runner:0.5'){
+        exclude module: 'support-annotations'
+    }
+
+    // Set this dependency to use JUnit 4 rules
+    androidTestCompile ('com.android.support.test:rules:0.5'){
+        exclude module: 'support-annotations'
+    }
+
+    // Set this dependency to build and run Espresso tests
+    androidTestCompile ('com.android.support.test.espresso:espresso-core:2.2.2'){
+        exclude module: 'support-annotations'
+    }
+
+
+    // required if you want to use Mockito for unit tests
+    testCompile 'org.mockito:mockito-core:2.7.22'
+
+    // required if you want to use Mockito for Android tests
+    androidTestCompile 'org.mockito:mockito-android:2.7.22'
+    androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
