--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     testCompile 'org.testng:testng:6.9.6'
     androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
 
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
     testCompile 'junit:junit:4.12'
     testCompile 'org.hamcrest:hamcrest-library:1.3'
     androidTestCompile ('com.android.support.test:runner:0.5'){
