--- a/Ratatouille_Project/build.gradle
+++ b/Ratatouille_Project/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.google.gms:google-services:3.0.0'
+        androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+        androidTestCompile 'com.android.support.test:runner:1.0.1'
     }
 
 }
