--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -29,8 +29,9 @@ repositories {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
+        //exclude group: 'com.android.support', module: 'support-annotations'
     })
+    androidTestCompile 'com.android.support:support-annotations:26.1.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.android.support:appcompat-v7:26.1.0'
