--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -78,6 +78,17 @@ dependencies {
     // required if you want to use Mockito for Android tests
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
+
+    testImplementation "org.robolectric:robolectric:3.5.1"
+
+}
+
+android {
+    testOptions {
+        unitTests {
+            includeAndroidResources = true
+        }
+    }
 }
 
 apply plugin: 'com.google.gms.google-services'
