--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.returnDefaultValues = true
+    }
 }
 
 repositories {
@@ -45,6 +48,10 @@ dependencies {
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'net.grandcentrix.tray:tray:0.12.0'
     testCompile 'org.testng:testng:6.9.6'
+    testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.7.22'
+    androidTestCompile 'org.mockito:mockito-android:2.7.22'
+
 }
 
 apply plugin: 'com.google.gms.google-services'
