--- a/Ratatouille_Project/app/build.gradle
+++ b/Ratatouille_Project/app/build.gradle
@@ -80,6 +80,7 @@ dependencies {
     androidTestCompile 'org.mockito:mockito-android:2.7.22'
     androidTestCompile 'com.squareup.okhttp3:mockwebserver:3.6.0'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-contrib:3.0.1'
     androidTestCompile 'com.android.support.test:runner:1.0.1'
 }
 
