--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
+        multiDexEnabled true
         applicationId "com.example.jl.ratatouille"
         minSdkVersion 21
         targetSdkVersion 26
@@ -16,6 +17,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
     }
 }
 
@@ -38,13 +49,14 @@ dependencies {
     compile 'com.android.support:design:26.1.0'
     compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.roughike:bottom-bar:2.3.1'
-    compile 'com.google.android.gms:play-services-maps:11.4.2'
+    compile 'com.google.android.gms:play-services-maps:11.8.0'
     compile 'com.google.code.gson:gson:2.8.2'
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.jjoe64:graphview:4.2.1'
     compile 'net.grandcentrix.tray:tray:0.12.0'
     testCompile 'org.testng:testng:6.9.6'
+    compile group: "com.twilio.sdk", name: "twilio", version: "7.17.+"
 }
 
 apply plugin: 'com.google.gms.google-services'
